<resources>
    <string name="app_name">Save Movies</string>
    <string name="description_image_splash">Imagem da tela de apresentação</string>
    <string name="description_like">Curtir</string>
    <string name="description_search">Procura</string>
    <string name="description_more">Mais</string>
    <string name="poster_descrition">Poster do filme</string>
    <string name="like_descrition">Botão gostei</string>

    <string name="home_title">Títulos salvos</string>
    <string name="info_title">Detalhes</string>
    <string name="hint_search">Que título você procura?</string>

    <string name="tv_released">Lançamento</string>
    <string name="tv_country_language">País/Idioma</string>
    <string name="tv_actors">Atores</string>
    <string name="tv_directed_by">Diretor(es)</string>
    <string name="tv_written_by">Roterista(s)</string>
    <string name="tv_produced_by">Produzido por</string>
    <string name="tv_awards">Prêmiações</string>
    <string name="tv_boxoffice">Bilheteria</string>
    <string name="tv_imdb_rating">Avaliação IMDB</string>

    <!--Mensages alert-->
    <string name="msg_search_info_alert">Tente pesquisar algo mais específico.</string>
    <string name="msg_not_found_alert">Nada encontrado…</string>
    <string name="msg_no_favorite_hello">Olá!</string>
    <string name="msg_no_favorite_description">Parece que você ainda não tem títulos salvos.</string>
    <string name="msg_no_favorite_sub_description">Que tal começar a procurar? Clique no icone (+) \n e busque por seus títulos favoritos.</string>
    <string name="msg_internet_alert">Ops!</string>
    <string name="msg_no_internet">Isso acontece quando você está desconectado. \n Por favor, verifique sua conexão e tente novamente.</string>
    <string name="msg_movie_saved">Salvo!</string>
    <string name="msg_movie_delete">Removido!</string>
    <string name="msg_unexpected_error">Erro inesperado!</string>
    <string name="msg_movie_wait">Espere e tente novamente…</string>
    <string name="rounded_separator"> &#8226; </string>

</resources>
