<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/not_found_imageview"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_no_favorites" />

    <TextView
        android:id="@+id/nothing_textview"
        style="@style/TextTitleAlert"
        android:layout_below="@+id/not_found_imageview"
        android:layout_marginTop="0dp"
        android:text="@string/msg_no_favorite_hello" />


    <TextView
        android:id="@+id/descriptio_textview"
        style="@style/TextSubTitleAlert"
        android:layout_below="@+id/nothing_textview"
        android:text="@string/msg_no_favorite_description"
        android:textAlignment="center" />

    <TextView
        style="@style/TextSubTitleAlert"
        android:layout_below="@+id/descriptio_textview"
        android:text="@string/msg_no_favorite_sub_description"
        android:textAlignment="center" />

</RelativeLayout>