<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="movie"
                type="br.com.brb.savemovies.data.model.entity.Movie" />

        <variable
            name="presenter"
            type="br.com.brb.savemovies.view.detail.DetailPresenter" />

    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_header"
            android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:id="@+id/likedImageView"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/like_descrition"
                        android:src="@drawable/ic_no_like" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <RelativeLayout
                android:id="@+id/progressRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:gravity="center"
                android:visibility="@{presenter.loadingVisibility}">

            <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/loader"
                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="visible"
                    app:indicatorColor="@color/colorAccent"
                    app:indicatorName="BallPulseIndicator" />

        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/alertNoInternetRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:visibility="@{presenter.messageNoInternetVisibility}">

            <include layout="@layout/fragment_no_internet" />

        </RelativeLayout>


        <ScrollView
                android:id="@+id/mainScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:fadingEdge="vertical"
                android:fadingEdgeLength="30dp"
                android:requiresFadingEdge="vertical"
                android:scrollbars="none"
                android:visibility="@{presenter.infoVisibility}">

            <RelativeLayout
                    android:id="@+id/searchRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:id="@+id/posterRelativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_centerHorizontal="true">

                    <ImageView
                            android:id="@+id/posterImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerCrop"
                            app:poster="@{movie.poster}" />

                    <ImageView
                            android:id="@+id/shadowImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerCrop"
                            android:src="@drawable/shadow_poster_movie" />

                    <LinearLayout
                            android:id="@+id/taxLinearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="start"
                                android:padding="@dimen/activity_horizontal_margin"
                                android:text="@{movie.title}"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:textStyle="bold" />


                        <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:layout_weight="1"
                                android:gravity="end|bottom"
                                android:padding="@dimen/activity_horizontal_margin"
                                android:text="@{movie.year}"
                                android:textAllCaps="true"
                                android:textColor="@color/lightGray"
                                android:textSize="14sp" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                        android:id="@+id/detailsLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/posterRelativeLayout"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:orientation="vertical">

                    <LinearLayout
                            android:id="@+id/topLinearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                                style="@style/TextDetailsValue"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@{movie.genre}"
                                android:textAllCaps="false" />


                        <TextView
                                style="@style/TextDetailsValue"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@{movie.runtime}"
                                android:textAllCaps="false" />

                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorAccent" />


                    <TextView
                            style="@style/TextDetailsValue"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="10dp"
                            android:text="@{movie.plot}" />


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_actors" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.actors}" />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_directed_by" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.director}" />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_written_by" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.writer}" />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_produced_by" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.production}" />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_country_language" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text='@{movie.country + "/" + movie.language}' />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_released" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.released}" />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_awards" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.awards}" />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_boxoffice" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.boxOffice}" />

                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                        <TextView
                                style="@style/TextDetailsTitle"
                                android:text="@string/tv_imdb_rating" />

                        <TextView
                                style="@style/TextDetailsValue"
                                android:text="@{movie.imdbRating}" />

                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>